Fix bullet point spacing

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -30,8 +30,8 @@ h3 {
     margin-left: 0;
 }
 
-li {
-    padding-bottom: 10px;
+ul li {
+    margin-bottom: 15px;
 }
 
 .btn-brand {
@@ -87,6 +87,7 @@ li {
     li {
         display: block;
         font-size: 14px;
+        margin-bottom: 0px;
     }
 
     a {
